Fix missing kotlin stdlib name shortening. Add remaining kotlin test files.